--- a/.gitignore
+++ b/.gitignore
@@ -31,12 +31,10 @@ hs_err_pid*
 replay_pid*
 
 # Node.js
-src/frontend/node_modules/
 **/node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-src/frontend/package-lock.json
 
 # Build outputs
 **/build/
@@ -47,7 +45,7 @@ src/frontend/package-lock.json
 Thumbs.db
 
 # Environment variables
-.env
+src/backend/tbd/.env
 .env.local
 .env.*.local
 
